// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CharacterSelectDropdown 렌더 트리 스냅샷 — 이후 변경을 잡는 기준선(예전 화면과의 대조가 아니다) 1`] = `
<View
  style={
    {
      "backgroundColor": "#F2F0E2",
      "flexBasis": "0%",
      "flexGrow": 1,
      "flexShrink": 1,
    }
  }
>
  <View
    style={
      {
        "alignSelf": "flex-start",
      }
    }
  >
    <View
      pointerEvents="none"
      style={
        {
          "bottom": 0,
          "justifyContent": "center",
          "left": 12,
          "position": "absolute",
          "top": 0,
        }
      }
      testID="character-select-emblem"
    >
      <Image
        accessibilityLabel="엘리시움"
        resizeMode="contain"
        source={
          {
            "testUri": "../../../packages/core/src/assets/worlds/elysium.png",
          }
        }
        style={
          {
            "height": 22,
          }
        }
      />
    </View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      role="button"
      style={
        {
          "backgroundColor": "#FDFCF6",
          "borderColor": "#CFC9AE",
          "borderRadius": 10,
          "borderWidth": 1,
          "minWidth": 160,
          "paddingBottom": 12,
          "paddingLeft": 32,
          "paddingRight": 36,
          "paddingTop": 12,
        }
      }
      testID="character-select-trigger"
    >
      <Text
        style={
          {
            "color": "#241208",
            "fontSize": 14,
            "lineHeight": 20,
          }
        }
      >
        낟낟
      </Text>
    </View>
    <View
      pointerEvents="none"
      style={
        {
          "bottom": 0,
          "justifyContent": "center",
          "position": "absolute",
          "right": 14,
          "top": 0,
        }
      }
      testID="character-select-chevron"
    >
      <RNSVGSvgView
        align="xMidYMid"
        aria-hidden={true}
        bbHeight={16}
        bbWidth={16}
        fill="none"
        focusable={false}
        height={16}
        meetOrSlice={0}
        minX={0}
        minY={0}
        stroke="#645C42"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth={2.5}
        style={
          [
            {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            {},
            {
              "flex": 0,
              "height": 16,
              "width": 16,
            },
          ]
        }
        vbHeight={24}
        vbWidth={24}
        width={16}
        xmlns="http://www.w3.org/2000/svg"
      >
        <RNSVGGroup
          fill={null}
          propList={
            [
              "fill",
              "stroke",
              "strokeWidth",
              "strokeLinecap",
              "strokeLinejoin",
            ]
          }
          stroke={
            {
              "payload": 4284767298,
              "type": 0,
            }
          }
          strokeLinecap={1}
          strokeLinejoin={1}
          strokeWidth={2.5}
        >
          <RNSVGPath
            d="m6 9 6 6 6-6"
            fill={null}
            propList={
              [
                "fill",
                "stroke",
                "strokeWidth",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={
              {
                "payload": 4284767298,
                "type": 0,
              }
            }
            strokeLinecap={1}
            strokeLinejoin={1}
            strokeWidth={2.5}
          />
        </RNSVGGroup>
      </RNSVGSvgView>
    </View>
  </View>
</View>
`;

exports[`CharacterSelectDropdown 렌더 트리 스냅샷 — 이후 변경을 잡는 기준선(예전 화면과의 대조가 아니다) 2`] = `
<View
  style={
    {
      "backgroundColor": "#F2F0E2",
      "flexBasis": "0%",
      "flexGrow": 1,
      "flexShrink": 1,
    }
  }
>
  <View
    style={
      {
        "alignSelf": "flex-start",
      }
    }
  >
    <View
      pointerEvents="none"
      style={
        {
          "bottom": 0,
          "justifyContent": "center",
          "left": 10,
          "position": "absolute",
          "top": 0,
        }
      }
      testID="character-select-emblem"
    >
      <Image
        accessibilityLabel="엘리시움"
        resizeMode="contain"
        source={
          {
            "testUri": "../../../packages/core/src/assets/worlds/elysium.png",
          }
        }
        style={
          {
            "height": 14,
          }
        }
      />
    </View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      role="button"
      style={
        {
          "backgroundColor": "#FDFCF6",
          "borderColor": "#CFC9AE",
          "borderRadius": 9999,
          "borderWidth": 1,
          "paddingBottom": 4,
          "paddingLeft": 28,
          "paddingRight": 28,
          "paddingTop": 4,
        }
      }
      testID="character-select-trigger"
    >
      <Text
        style={
          {
            "color": "#645C42",
            "fontSize": 12,
            "fontWeight": "500",
            "lineHeight": 16,
          }
        }
      >
        낟낟
      </Text>
    </View>
    <View
      pointerEvents="none"
      style={
        {
          "bottom": 0,
          "justifyContent": "center",
          "position": "absolute",
          "right": 10,
          "top": 0,
        }
      }
      testID="character-select-chevron"
    >
      <RNSVGSvgView
        align="xMidYMid"
        aria-hidden={true}
        bbHeight={12}
        bbWidth={12}
        fill="none"
        focusable={false}
        height={12}
        meetOrSlice={0}
        minX={0}
        minY={0}
        stroke="#645C42"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth={2.5}
        style={
          [
            {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            {},
            {
              "flex": 0,
              "height": 12,
              "width": 12,
            },
          ]
        }
        vbHeight={24}
        vbWidth={24}
        width={12}
        xmlns="http://www.w3.org/2000/svg"
      >
        <RNSVGGroup
          fill={null}
          propList={
            [
              "fill",
              "stroke",
              "strokeWidth",
              "strokeLinecap",
              "strokeLinejoin",
            ]
          }
          stroke={
            {
              "payload": 4284767298,
              "type": 0,
            }
          }
          strokeLinecap={1}
          strokeLinejoin={1}
          strokeWidth={2.5}
        >
          <RNSVGPath
            d="m6 9 6 6 6-6"
            fill={null}
            propList={
              [
                "fill",
                "stroke",
                "strokeWidth",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={
              {
                "payload": 4284767298,
                "type": 0,
              }
            }
            strokeLinecap={1}
            strokeLinejoin={1}
            strokeWidth={2.5}
          />
        </RNSVGGroup>
      </RNSVGSvgView>
    </View>
  </View>
</View>
`;
